--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         </div>
                     </div>
                 </h1>
-                <img src="images/avatar.jpg" alt="Your name here">
+                <img src="images/photo_2022-02-15_17-06-20.jpg" alt="Your name here">
             </a>
 
             <div class="clear"></div>
