--- a/autobiography.html
+++ b/autobiography.html
@@ -16,7 +16,7 @@
 <body>
     <div style="text-align: center">
         <a href="https://youtu.be/k6ZoE4RrcDs" target="blank">
-            <img src="images/avatar.jpg" width="400">
+            <img src="images/photo_2022-02-15_17-06-20.jpg" width="400">
         </a>
         <br>
         <br>
