--- a/autobiography.html
+++ b/autobiography.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div style="text-align: center">
-        <a href="https://youtu.be/k6ZoE4RrcDs" target="blank">
+        <a href="https://youtu.be/_x7M3Iel_bA" target="blank">
             <img src="images/photo_2022-02-15_17-06-20.jpg" width="400">
         </a>
         <br>
